--- a/Prueba1.html
+++ b/Prueba1.html
@@ -48,8 +48,8 @@
 		</div>
 	</div>
 
-	<div>
-		
+	<div class="image-one">
+		H
 	</div>
 
 	<div class="container">
@@ -74,7 +74,7 @@
 	</div>
 
 	<div class="container-fluid section-blue">
-		<div class="row">
+		<div class="row futter">
 			<div class="col-sm-12 col-md-12 col-xs-12">
 				<div class="container">
 					<div class="row justify-content-between futter">
@@ -104,15 +104,7 @@
 			</div>
 		</div>
 
-		
 	</div>
-
-
-
-
-
-
-
 
 	<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
