--- a/Prueba1.html
+++ b/Prueba1.html
@@ -32,6 +32,11 @@
 			</div>
 		</div>
 	</div>
+	<div class="container-fluid">
+			<div class="image-one">
+				
+			</div>
+	</div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-3 col-sm-3 col-xs-12">
@@ -48,9 +53,6 @@
 		</div>
 	</div>
 
-	<div class="image-one">
-		H
-	</div>
 
 	<div class="container">
 		<div class="row">
