--- a/Prueba1.html
+++ b/Prueba1.html
@@ -34,17 +34,17 @@
 	</div>
 	<div class="container-fluid">
 			<div class="image-one">
-				
-			</div>
-	</div>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-12">
-				<h1 class="display-3 text-left">Confiable, justo cuando lo necesitas</h1>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-3 col-sm-3 col-xs-12 content">
+							<h1 class="display-3 text-left">Confiable, justo cuando lo necesitas</h1>
 				<button type="button" class="btn btn-warning">Descargala ahora</button>
 			</div> 
 		</div>
 	</div>
+	</div>
+
+
 
 	<div class="container-fluid">
 		<div class="row section-blue">
