--- a/Prueba1.html
+++ b/Prueba1.html
@@ -32,24 +32,29 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="container-fluid">
-			<div class="image-one">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-3 col-sm-3 col-xs-12 content">
-							<h1 class="display-3 text-left">Confiable, justo cuando lo necesitas</h1>
-				<button type="button" class="btn btn-warning">Descargala ahora</button>
-			</div> 
+		<div class="image-one img-attachmet">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-3 col-sm-3 col-xs-12 content">
+						<h1 class="display-3 text-left">Confiable, justo cuando lo necesitas</h1>
+						<button type="button" class="btn btn-warning">Descargala ahora</button>
+					</div> 
+				</div>
+			</div>
 		</div>
 	</div>
-	</div>
-
-
 
 	<div class="container-fluid">
 		<div class="row section-blue">
 			<img src="images/icons-s3-lg.png">
 			<img src="">
+		</div>
+	</div>
+
+	<div class="container-fluid">
+		<div class="image-two img-attachmet">
 		</div>
 	</div>
 
