--- a/Prueba1.html
+++ b/Prueba1.html
@@ -19,15 +19,15 @@
 				<img src="images/logo.png" class="rounded mx-auto d-block logo" alt="logo">
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-6 col-sm-6 col-xs-12">
+		<div class="row content">
+			<div class="col-md-6 col-sm-6 col-xs-12 justify-content-center">
 				<img src="images/phone-1.png" class="rounded float-end phone-1" alt="logo">
 			</div>
 			<div class="col-md-6 col-sm-6 col-xs-12">
 				<h1 class="display-3 text-left">A donde tu quieras solo con un !click!</h1>
 				<div class="stores">
-					<img src="images/google-play.png" class="rounded d-block store" alt="logo">  
-					<img src="images/app-store.png" class="rounded d-block store" alt="logo">
+					<img src="images/google-play.png" class="col-xs-12 rounded d-block store" alt="logo">  
+					<img src="images/app-store.png" class="col-xs-12 rounded d-block store" alt="logo">
 				</div>
 			</div>
 		</div>
@@ -37,7 +37,7 @@
 		<div class="image-one img-attachmet">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-3 col-sm-3 col-xs-12 content">
+					<div class="col-md-3 col-sm-3 col-xs-12 justify-content-center content-2">
 						<h1 class="display-3 text-left">Confiable, justo cuando lo necesitas</h1>
 						<button type="button" class="btn btn-warning">Descargala ahora</button>
 					</div> 
@@ -60,7 +60,7 @@
 
 
 	<div class="container">
-		<div class="row">
+		<div class="row content">
 			<div class="col-md-6 col-sm-6 col-xs-12">
 				<h4 class="display-4">Se nuestro socio, conduciendo tu taxi</h4>	
 			</div>
@@ -85,25 +85,25 @@
 			<div class="col-sm-12 col-md-12 col-xs-12">
 				<div class="container">
 					<div class="row justify-content-between futter">
-						<div class="col-1">
+						<div class="col-1 col-xs-12">
 							<img src="images/icon-face.png" class="rounded-circle">
 						</div>
-						<div class="col-1">
+						<div class="col-1 col-xs-12">
 							<img src="images/icon-instagram.png" class="rounded-circle">
 						</div>
-						<div class="col-1">
+						<div class="col-1 col-xs-12">
 							<img src="images/icon-dir.png" class="">
 							<h5> Av Washington y calle Santa Ana, Ciudadela California</h5>
 						</div>
-						<div class="col-1">
+						<div class="col-1 col-xs-12">
 							<img src="images/icon-mail.png" class="">
 							<h5>info@clickinge.com</h5>
 						</div>
-						<div class="col-1">
+						<div class="col-1 col-xs-12">
 							<img src="images/icon-phone.png" class="">
 							<h5>+593 980492643</h5>
 						</div>
-						<div class="col-1">
+						<div class="col-1 col-xs-12">
 							<h5> Terminos y condiciones </h5>
 						</div>
 					</div>
